force-app/main/default/objects/Assignment_History__c/Assignment_History__c.object-meta.xml
<CustomObject>
    <description>RCI Deputy assignment tracking</description>
    <label>Assignment History</label>
    <nameField>
        <displayFormat>AH-{000000}</displayFormat>
        <label>Assignment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>