force-app/main/default/objects/Assignment_History__c/fields/Assigned_Deputy_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputy_Tenure__c</fullName>
    <formula>IF( 
NOT(ISNULL(End_Date__c)),
(TEXT(FLOOR((End_Date__c-Start_Date__c)/365.2425)) &amp; &quot; year(s)&quot;&amp;&quot;, &quot; &amp; 
TEXT(FLOOR(MOD((End_Date__c-Start_Date__c),365.2425)/30)) &amp; &quot; month(s)&quot;&amp;&quot;, &quot;&amp; 
TEXT(Floor(MOD(Floor(MOD((End_Date__c-Start_Date__c),365.2425)),30))) &amp; &quot; day(s)&quot;&amp;&quot;; &quot;&amp;TEXT(End_Date__c-Start_Date__c)&amp;&quot; days&quot;), 

TEXT(FLOOR((TODAY()-Start_Date__c)/365.2425)) &amp; &quot; year(s)&quot;&amp;&quot;, &quot; &amp; 
TEXT(FLOOR(MOD((TODAY()-Start_Date__c),365.2425)/30)) &amp; &quot; month(s)&quot;&amp;&quot;, &quot;&amp; 
TEXT(Floor(MOD(Floor(MOD((TODAY()-Start_Date__c),365.2425)),30))) &amp; &quot; day(s)&quot;&amp;&quot;; &quot;&amp;TEXT(TODAY()-Start_Date__c)&amp;&quot; days&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Deputy Tenure</label>
    <type>Text</type>
</CustomField>