force-app/main/default/objects/Assignment_History__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Assignment History</relationshipLabel>
    <relationshipName>Assignment_History</relationshipName>
    <type>Lookup</type>
</CustomField>