force-app/main/default/objects/Assignment_History__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Assigned Deputy start date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>