force-app/main/default/objects/Assignment_History__c/fields/Screener__c.field-meta.xml
<CustomField>
    <fullName>Screener__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box for RCI to differentiate screener from investigator.</description>
    <label>Screener</label>
    <type>Checkbox</type>
</CustomField>