force-app/main/default/objects/Assignment_History__c/fields/X090DaysV2__c.field-meta.xml
<CustomField>
    <fullName>X090DaysV2__c</fullName>
    <description>This field is used for reporting</description>
    <formula>IF(VALUE(Tenure_Days__c) &lt;= 90, &quot;Yes&quot;, &quot; &quot;)</formula>
    <label>0 - 90 DaysV2</label>
    <type>Text</type>
</CustomField>